src/main/java/syntactic/test/passing/newConArgumentos.ru
start {
    Int a;
    a = new Capo(1,2,3);
}

/? CORRECTO: ANALISIS SINTACTICO