src/main/java/syntactic/test/failing/newId.ru
start {
    Int a;
    a = new capo(1,2,3);
}